fix header height on mobile

--- a/src/assets/theme/src/style.sass
+++ b/src/assets/theme/src/style.sass
@@ -292,7 +292,7 @@ ol
 
     .hero-image
         @apply w-screen
-        height: 130.4vw
+        height: 104vw
         margin-left: calc(-50vw + 50%)
 
         @screen md
@@ -313,7 +313,7 @@ ol
                 max-height: 500px
 
             div
-                padding-bottom: 131% !important
+                padding-bottom: 104% !important
 
                 @screen md
                     padding-bottom: 86% !important
